<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2020, RTE (http://www.rte-france.com)
    This Source Code Form is subject to the terms of the Mozilla Public
    License, v. 2.0. If a copy of the MPL was not distributed with this
    file, You can obtain one at http://mozilla.org/MPL/2.0/.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.powsybl</groupId>
        <artifactId>powsybl-parent</artifactId>
        <version>14</version>
        <relativePath/>
    </parent>

    <artifactId>pypowsybl-parent</artifactId>

    <packaging>pom</packaging>
    <version>1.10.0-SNAPSHOT</version>
    <description>PyPowSyBl Java part parent project</description>
    <url>https://www.powsybl.org</url>

    <licenses>
        <license>
            <name>Mozilla Public License, Version 2.0</name>
            <url>https://www.mozilla.org/en-US/MPL/2.0/</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:https://github.com/powsybl/pypowsybl.git</connection>
        <developerConnection>scm:git:https://github.com/powsybl/pypowsybl.git</developerConnection>
        <url>https://github.com/powsybl/pypowsybl/tree/main/</url>
    </scm>

    <developers>
        <developer>
            <name>Geoffroy JAMGOTCHIAN</name>
            <email>geoffroy.jamgotchian@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
        <developer>
            <name>Hugo Kulesza</name>
            <email>hugo.kulesza@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
        <developer>
            <name>Sylvain LECLERC</name>
            <email>sylvain.leclerc@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
        <developer>
            <name>Etienne LESOT</name>
            <email>etienne.lesot@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
    </developers>

    <properties>
        <java.version>17</java.version>
        <powsybl-dependencies.version>2024.4.0</powsybl-dependencies.version>
        <powsybl-open-rao.version>6.0.1</powsybl-open-rao.version>
        <powsybl-open-reac.version>0.10.0</powsybl-open-reac.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-dependencies</artifactId>
                <version>${powsybl-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>pypowsybl</module>
        <module>pypowsybl-pgo</module>
    </modules>
</project>
